2009-05-05  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Applied a patch from Laszlo for NB#113598:
	* matchbox/core/mb-wm-decor.c (mb_wm_decor_destroy): Remove
	ButtonRelease handler as well.
	(mb_wm_decor_button_destroy): Move code from
	mb_wm_decor_button_unrealize to here.

	Applied a fixed patch from Laszlo for NB#110527:
	* matchbox/core/mb-wm-client-window.c (mb_wm_client_window_init):
	Remove the XSelectInput call.
	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_realize): Call
	XSelectInput here and read the transiency property also.

	* matchbox/client-types/mb-wm-client-menu.c (mb_wm_client_menu_init):
	Add support for fixing NB#101437 -- some parts of the code need to be
	removed after the widget side uses the negative coordinates system for
	legacy application menus.

2009-05-04  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Applied two patches from Laszlo Pere for NB#110527 and NB#106208.

	* matchbox/core/mb-wm-client-window.c (mb_wm_client_window_init): Call
	XSelectInput here instead of in matchbox/core/mb-wm-client-base.c
	(mb_wm_client_base_realize), except for override-redirect windows.
	* matchbox/client-types/mb-wm-client-app.c,
	matchbox/client-types/mb-wm-client-app.h,
	matchbox/client-types/mb-wm-client-dialog.h,
	matchbox/core/mb-wm-object.h: If parent MBWMClientApp is mapped after
	the child (in transiency sense), set the transiency in
	mb_wm_client_app_init.

2009-05-04  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#112601 An application from the background is topped when panning
		  or tapping on the right side of the touch screen

	* matchbox/core/mb-wm-client.c (mb_wm_client_init):
	  Don't set up a passive grab when a client is created...
	* matchbox/core/mb-window-manager.c (mb_wm_handle_button_press):
	  ...and don't handle all button press events.  It's thought
	  to be dead code and caused the problem because we reactivated
	  the clicked client in home view.
